Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.101610  2010-06-10 21:50:18 Europe/Vienna
    - applied perltidy
    - added dry-run tests

1.101420  2010-05-22 22:02:43 Europe/Vienna
    - make --man and --help work again now that the docs are in the module

1.101000  2010-04-10 17:23:20 Europe/Vienna
    - added many variables from perlvar
    - made the application pluggable with Module::Pluggable and Class::Trigger

1.100770  2010-03-18 21:52:17 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - exposed %found_in as a package global
    - removed Class::MethodMaker definitions
    - added Moose definitions
    - removed duplicates
    - added dedup test

1.100710  2010-03-12 00:48:03 Europe/Vienna
    - converted the distribution to Dist::Zilla-style
    - moved the code to App::perlzonji; bin/perlzonji is just a thin wrapper
    - documented the subroutines

0.04  Thu 2010.02.18 20:59:44 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added environment variables (perlrun) and PerlIO layer names
     - explained the word "zonji"

0.03  Fri 2010.02.12 11:36:44 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added --perldoc-command, --debug and other common options (daxim)

0.02  Mon 2010.02.08 14:54:26 CET (Marcel Gruenauer <marcel@cpan.org>)
     - added docs to bin/perlzonji

0.01  Mon 2010.02.08 13:24:15 UTC (Marcel Gruenauer <marcel@cpan.org>)
     - original version