@@ -1,4 +1,6 @@
 name = App-perlzonji
+author = Marcel Gruenauer <marcel@cpan.org>
+author = Leo Lapworth <LLAP@cuckoo.org>
 copyright_year = 2010
 
 [@MARCEL]
