@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - extract find_matches() so it can be accessed directly (thanks
+      ranguard)
 
 1.101610  2010-06-10 21:50:18 Europe/Vienna
     - applied perltidy
